# TM_oop_lab1

./: README.md  pair.py  pyproject.toml  task_1.py  test_pair.py
examples/: book_example.py  pet_example.py  rational_example.py  rectangle_example.py  river_example.py  ship_example.py
tasks/: __init__.py  pair.py  task2.py  task_1.py  task_2.py
tasks/money_package/: __init__.py  money.py
tasks/money_task/: __init__.py  money_task.py
tests/: test_money.py  test_pair.py
