[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm-oop-lab1"
version = "1.0.0"
description = "Лабораторная работа по ООП"
authors = [
    {name = "Madina"},
]
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
